[feat/#29] -유저 권한에 따른 요청 변경 및 유저ROLE추가